installments/whoami-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: whoami
