installments/whoami-test/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: whoami
