installments/whoami-test/whoami-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: whoami.pi-worker-1
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami-service
              servicePort: http
